test/libyul/yulSyntaxTests/instructions_too_few_args_2.yul
{
	pop(mul(1))
}
// ----
// TypeError 7000: (7-10): Function expects 2 arguments but got 1.
